// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphResolver Creating a new graph Testing the new graph 1`] = `
{
  "__typename": "Graph",
  "dateRange": "halfYear",
  "group": {
    "group": "Month",
    "hideOthers": null,
    "labels": null,
  },
  "groupOwnerId": 1,
  "horizontalGroup": null,
  "id": 1,
  "kind": "Bar",
  "labelFilter": null,
  "name": "name: 0",
}
`;

exports[`GraphResolver testing with some data Testing query the graphs 1`] = `
{
  "dateRange": "halfYear",
  "group": {
    "group": "Month",
    "hideOthers": null,
    "labels": null,
  },
  "groupOwnerId": 1,
  "horizontalGroup": null,
  "id": 1,
  "kind": "Pie",
  "labelFilter": null,
  "name": "first",
}
`;

exports[`GraphResolver testing with some data Testing query the graphs 2`] = `
{
  "dateRange": "oneYear",
  "group": {
    "group": "Labels",
    "hideOthers": false,
    "labels": [
      1,
      2,
    ],
  },
  "groupOwnerId": 1,
  "horizontalGroup": {
    "accumulate": false,
    "group": "Labels",
    "hideOthers": true,
    "labels": [
      3,
      4,
    ],
  },
  "id": 34,
  "kind": "Line",
  "labelFilter": null,
  "name": "huge graph",
}
`;
